[gd_scene load_steps=18 format=3 uid="uid://dx5uxgpmyfq2m"]

[ext_resource type="Script" uid="uid://bhe3lbt7mjv4p" path="res://Scripts/Enemies/Mummy/mummy.gd" id="1_cg7va"]
[ext_resource type="Texture2D" uid="uid://clt46oxeu8j2s" path="res://Art/enemy_mummy.png" id="2_8fny0"]
[ext_resource type="Script" uid="uid://dlmlqea2et8ql" path="res://Scripts/Player/PlayerStates/state_machine.gd" id="3_04n3g"]
[ext_resource type="Script" uid="uid://idt26s86lgrv" path="res://Scripts/Enemies/Mummy/mummy_aggro_state.gd" id="4_18sl8"]
[ext_resource type="Script" uid="uid://rweaufk21ung" path="res://Scripts/Enemies/Mummy/passive_state.gd" id="5_00s6o"]
[ext_resource type="Script" uid="uid://cvn6d00edofxb" path="res://Scripts/Enemies/Mummy/waking_state.gd" id="6_acdfu"]
[ext_resource type="AudioStream" uid="uid://dc10qrcjcsta5" path="res://Sounds/mummy_wake.wav" id="7_jppne"]
[ext_resource type="Script" uid="uid://cailuu6804x1h" path="res://Scripts/sound_effect_player.gd" id="8_ynrlu"]
[ext_resource type="Script" uid="uid://cukfvupalltqk" path="res://Scripts/Enemies/Mummy/player_hurter.gd" id="9_tg0bl"]
[ext_resource type="AudioStream" uid="uid://rn01ct771nrh" path="res://Sounds/hurt_1.wav" id="10_7uhr8"]
[ext_resource type="AudioStream" uid="uid://bc8so1lavnmxl" path="res://Sounds/mummy_chase.wav" id="11_2elw8"]

[sub_resource type="Animation" id="Animation_y82id"]
resource_name = "Idle"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/Animator/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/Animator/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/Animator/Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/Animator/Sprite2D:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flipper/Animator/Sprite2D:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_y75nm"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/Animator/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/Animator/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/Animator/Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/Animator/Sprite2D:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flipper/Animator/Sprite2D:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_cmt5j"]
resource_name = "Run"
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/Animator/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flipper/Animator/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-1, -0.25, 0, 0.25, 0, 1.33, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0, 1.33, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flipper/Animator/Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.523599, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.523599, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.523599, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flipper/Animator/Sprite2D:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flipper/Animator/Sprite2D:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.57, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.57, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gywfe"]
_data = {
&"Idle": SubResource("Animation_y82id"),
&"RESET": SubResource("Animation_y75nm"),
&"Run": SubResource("Animation_cmt5j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j2jm"]
size = Vector2(3, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_mcc5g"]
radius = 10.0499

[node name="Mummy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 66
collision_mask = 9
script = ExtResource("1_cg7va")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gywfe")
}
speed_scale = 2.0

[node name="Flipper" type="Node2D" parent="."]

[node name="Animator" type="Node2D" parent="Flipper"]

[node name="Sprite2D" type="Sprite2D" parent="Flipper/Animator"]
texture = ExtResource("2_8fny0")
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_6j2jm")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "parent")]
script = ExtResource("3_04n3g")
current_state = NodePath("PassiveState")
parent = NodePath("..")

[node name="AggroState" type="Node" parent="StateMachine"]
script = ExtResource("4_18sl8")

[node name="PassiveState" type="Node" parent="StateMachine"]
script = ExtResource("5_00s6o")

[node name="WakingState" type="Node" parent="StateMachine"]
script = ExtResource("6_acdfu")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_mcc5g")

[node name="MiddleRay" type="RayCast2D" parent="."]
position = Vector2(0.5, 3)
target_position = Vector2(0, 1)
collision_mask = 8

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2(2, 3)
target_position = Vector2(0, 1)
collision_mask = 8

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2(-1, 3)
target_position = Vector2(0, 1)
collision_mask = 8

[node name="WallRayRight" type="RayCast2D" parent="."]
position = Vector2(2, 0)
target_position = Vector2(1, 0)
collision_mask = 8

[node name="WallRayLeft" type="RayCast2D" parent="."]
position = Vector2(-1, 0)
target_position = Vector2(-1, 0)
collision_mask = 8

[node name="WakeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jppne")
volume_db = 1.975
bus = &"VerbBus"
script = ExtResource("8_ynrlu")

[node name="PlayerHurter" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2
script = ExtResource("9_tg0bl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerHurter"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_6j2jm")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_7uhr8")
pitch_scale = 2.48
script = ExtResource("8_ynrlu")

[node name="ChaseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_2elw8")
max_distance = 300.0
attenuation = 1.7411
panning_strength = 3.0
bus = &"VerbBus"

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="PlayerHurter" to="PlayerHurter" method="_on_body_entered"]
